section added on UI

--- a/.env_sample
+++ b/.env_sample
@@ -8,3 +8,4 @@ CANVAS_GRADER_NAME=Bishnu
 MOSS_URL=http://cs1050.northcentralus.cloudapp.azure.com/cs1050/sp2023
 MOSS_USER=
 MOSS_PASSWORD=
+SERVER_WORKING_DIR=~
